Fix style bug on Safari 14

--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,10 @@
 html, body {
     padding: 0;
     margin: 0;
-    min-height: -webkit-fill-available;
+}
+
+html {
+    height: -webkit-fill-available;
 }
 
 body {
@@ -17,6 +20,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    min-height: -webkit-fill-available;
 }
 
 body, main.home h2 {
